--- a/rapido.css
+++ b/rapido.css
@@ -72,6 +72,16 @@ article.rapido > header {
 
 /* end header */
 
+/* footer */
+
+article.rapido > footer {
+	border-top: 1px solid #dedede;
+	padding: 10px 0 20px 0;
+	opacity: 0.7;
+}
+
+/* end footer */
+
 /* h1 */
 
 .rapido section > h1 {
@@ -90,6 +100,26 @@ article.rapido > header > h1 {
 	font-weight: bold;
 }
 
+article.rapido > footer h1 {
+	font-size: 12px;
+	line-height: 18px;
+	text-transform: uppercase;
+	margin: 0 0 10px 0;
+}
+
+article.rapido > footer > h1 {
+	margin: 20px 0 10px 0;
+}
+
+@media (min-width: 1024px) {
+	article.rapido > footer > section > h1 {
+		margin: 0;
+		max-width: 200px;
+		position: absolute;
+		padding-right: 20px;
+	}
+}
+
 .rapido section figcaption > h1,
 article.rapido > header > figure > figcaption > h1 {
 	display: inline;
@@ -97,6 +127,15 @@ article.rapido > header > figure > figcaption > h1 {
 	font-size: 14px;
 	line-height: 21px;
 	font-weight: bold;
+}
+
+article.rapido > footer figure > figcaption > h1 {
+	display: inline;
+	font-size: 12px;
+	line-height: 18px;
+	padding: 0;
+	font-weight: bold;
+	text-transform: unset;
 }
 
 @media (max-width: 1023px) {
@@ -131,6 +170,21 @@ article.rapido > header > figure > figcaption > h1 {
 	font-weight: bold;
 }
 
+article.rapido > footer > h2,
+article.rapido > footer > section > h2 {
+	max-width: unset;
+	margin: 0 0 10px 0;
+	font-size: 12px;
+	line-height: 18px;
+}
+
+@media (min-width: 1024px) {
+	article.rapido > footer > section > h2 {
+		max-width: calc(100% - 200px);
+		margin-left: 200px;
+	}
+}
+
 /* end h2 */
 
 /* section */
@@ -138,6 +192,16 @@ article.rapido > header > figure > figcaption > h1 {
 .rapido section {
 	width: 100%;
 	padding: 10px 0;
+}
+
+article.rapido > footer > section {
+	padding: 10px 0;
+}
+
+@media (min-width: 1024px) {
+	article.rapido > footer > section {
+		padding: 20px 0;
+	}
 }
 
 /* end section */
@@ -190,7 +254,8 @@ article.rapido > header > figure > figcaption > h1 {
 	}
 }
 
-article.rapido > header > figure > figcaption {
+article.rapido > header > figure > figcaption,
+article.rapido > footer > section > figure > figcaption {
 	width: 100%;
 	margin: 5px 0 0 0;
 }
@@ -206,6 +271,16 @@ article.rapido > header > figure > figcaption {
 	margin: 20px 0 20px 0;
 }
 
+article.rapido > footer figure {
+	margin: 10px 0;
+}
+
+@media (min-width: 1024px) {
+	article.rapido > footer > section > figure {
+		margin: 10px 0 10px 200px;
+	}
+}
+
 /* end figure */
 
 /* li */
@@ -213,6 +288,13 @@ article.rapido > header > figure > figcaption {
 .rapido li {
 	font-size: 14px;
 	line-height: 21px;
+}
+
+article.rapido > footer li {
+	width: 100%;
+	font-size: 12px;
+	line-height: 18px;
+	margin-bottom: 10px;
 }
 
 /* end li */
@@ -233,6 +315,25 @@ article.rapido > header > figure > figcaption {
 
 .rapido ol {
 	list-style-type: decimal;
+}
+
+article.rapido > footer ul,
+article.rapido > footer ol {
+	margin: 0;
+}
+
+article.rapido > footer > ul,
+article.rapido > footer > ol {
+	max-width: unset;
+}
+
+@media (min-width: 1024px) {
+	article.rapido > footer > section > ol,
+	article.rapido > footer > section > ul {
+		margin: 0 0 10px 200px;
+		width: calc(100% - 200px);
+		max-width: unset;
+	}
 }
 
 /* end ol, ul */
@@ -291,10 +392,25 @@ article.rapido > header > p {
 	line-height: 45px;
 }
 
-.rapido > header > figure > figcaption > p {
+article.rapido > footer p {
+	font-size: 12px;
+	line-height: 18px;
+	max-width: unset;
+	margin: 0 0 10px 0;
+}
+
+@media (min-width: 1024px) {
+	article.rapido > footer > section > p {
+		margin: 0 0 10px 200px;
+	}
+}
+
+article.rapido > footer figcaption > p {
+	padding: 0;
+}
+
+article.rapido > footer li > p {
 	display: inline;
-	font-size: 14px;
-	line-height: 21px;
 }
 
 @media (max-width: 499px) {
@@ -328,6 +444,28 @@ article.rapido > header > p {
 	line-height: 21px;
 }
 
+article.rapido > footer pre {
+	margin: 10px 0;
+}
+
+article.rapido > footer pre,
+article.rapido > footer figure > pre {
+	width: 100%;
+	font-size: 12px;
+	line-height: 18px;
+}
+
+article.rapido > footer figure > pre {
+	margin: 0;
+}
+
+@media (min-width: 1024px) {
+	article.rapido > footer > section > pre {
+		margin: 10px 0 10px 200px;
+		width: calc(100% - 200px);
+	}
+}
+
 /* end pre */
 
 /* a */
@@ -339,6 +477,10 @@ article.rapido > header > p {
 	text-decoration: underline;
 }
 
+.rapido cite > a {
+	text-decoration: none;
+}
+
 article.rapido > header > address > a {
 	margin: 5px 15px 5px 0;
 }
@@ -346,6 +488,10 @@ article.rapido > header > address > a {
 /* end a */
 
 /* cite */
+
+.rapido cite {
+	font-style: normal;
+}
 
 .rapido section > cite {
 	display: block;
@@ -377,12 +523,21 @@ article.rapido > header > address > a {
 	padding: 0 10px;
 }
 
+article.rapido > footer code {
+	color: #353830;
+}
+
 .rapido pre > mark > code {
 	display: inline-block;
 	min-width: 100%;
 	padding: 0 8px;
 	border-left: 2px solid blue;
 	background: rgba(0, 0, 255, 0.05);
+}
+
+article.rapido > footer pre > mark > code {
+	border-left: 2px solid #353839;
+	background: rgba(0, 0, 0, 0.05);
 }
 
 /* end code */
