--- a/rapido.css
+++ b/rapido.css
@@ -107,6 +107,11 @@ article.rapido > header > figure > figcaption > h1 {
 }
 
 @media (max-width: 499px) {
+	.rapido section > h1 {
+		font-size: 24px;
+		line-height: 36px;
+	}
+
 	article.rapido > header > h1 {
 		font-size: 30px;
 		line-height: 45px;
@@ -290,6 +295,13 @@ article.rapido > header > p {
 	display: inline;
 	font-size: 14px;
 	line-height: 21px;
+}
+
+@media (max-width: 499px) {
+	article.rapido > header > p {
+		font-size: 24px;
+		line-height: 36px;
+	}
 }
 
 /* end p */
