close #27 | use the img element as child of the section element

--- a/rapido.css
+++ b/rapido.css
@@ -621,6 +621,8 @@ article.rapido > footer pre > mark > code {
 	}
 }
 
+.rapido section > img,
+.rapido section > video,
 .rapido section figure > img,
 .rapido section figure > video {
 	display: block;
