close #132 | bug with avatar image

--- a/rapido.css
+++ b/rapido.css
@@ -706,6 +706,7 @@ article.rapido > header > video {
 }
 
 article.rapido > header > address > img {
+	display: inline-block;
 	width: 50px;
 	height: 50px;
 	margin-right: 5px;
